# ZPAI

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/Docs/: db_queries.sql
backend/alembic/: env.py
backend/alembic/versions/: 122fbb741819_change_price_to_string.py  17a8da7bd990_remove_price.py  1c239ac734b0_opis_migracji.py  44ba0a4364d1_.py  485062be6f7b_add_tables.py  4c1a06701709_added_initial_table.py  513f2b979db2_add_categories_table.py  618616b7cdef_initial_migration.py  649f3abf6936_opis_migracji.py  675b3c2aa2bc_initial.py  691b5261b175_add_image_url.py  8128d3f987d3_unique.py  84791afd086a_update_product.py  8572df601bfb_.py  8e4f953d3fbc_remove_likes.py  9c42847fd8f4_initial_migration.py  a71a5006de9e_.py  ae5f1601491a_add_product.py  cc15985872a2_new.py  d0fcf393e808_initial_migration.py  d715edd90ccf_add_datetime.py  fb0fc7f85663_update_meal.py
backend/src/: consts.py  database.py  enums.py  helpers.py  main_fastapi.py  settings.py
backend/src/business_logic/entities/: categories.py  comments.py  likes.py  meals.py  products.py  spooncular_recipes.py  users.py
backend/src/business_logic/interfaces/: categories.py  comments.py  likes.py  meals.py  products.py  users.py
backend/src/business_logic/use_cases/: categories.py  comments.py  likes.py  meals.py  products.py  users.py
backend/src/clients/: base_http_client.py  converters.py  http_client.py  minio_client.py
backend/src/http_client/: converters.py  http_client.py
backend/src/repositories/: categories.py  comment.py  likes.py  meals.py  models.py  products.py  users.py
backend/src/repositories/meals/: models.py  (+1 more)
backend/src/routers/: categories.py  comments.py  likes.py  meals.py  products.py  spooncular_recipes.py  test_router.py  users.py
backend/src/utils/: icon.html  minio_utils.py  unit_converter.py
(+23 files in other folders)
