[tool.poetry]
name = "meal_fuel"
version = "0.1.0"
description = ""
authors = ["Adrian Bożęcki <mail.bozecki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
fastapi-restful = "^v0.5.0"
uvicorn = "^0.15.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
typing-inspect = "^0.9.0"
fastapi-pagination = "^0.12.9"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.4"
black = "^23.7.0"
dotenv-linter = "^0.4.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pyproject = "^1.2.3"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
freezegun = "^1.2.2"
isort = {version = "^5.12.0", extras = ["colors"]}
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
pytest-mock = "^3.11.1"
pytest-lazy-fixture = "^0.6.3"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = 'alembic/'

[tool.isort]
line_length = 100
order_by_type = false
profile = "black"
skip = "alembic/"

[tool.flake8]
max-line-length = 160
extend-immutable-calls = ["Query", "Path", "Body", "Depends", "params.Depends", "Header", "fastapi.Depends", "fastapi.params.Depends"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = false
disable_error_code = ["misc"]
exclude = ["/_tests/", "conftest"]
strict_equality = true
